--- a/AdryBalmaceda/Ecommerce/index.html
+++ b/AdryBalmaceda/Ecommerce/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content=""IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--corregir-->
         <link rel="stylesheet" href="styles.css">
+        <script src="https://sdk.mercadopago.com/js/v2"></script>
         <title>Document</title>
     </head>
     <body>
@@ -15,6 +16,8 @@
 
         <!--cart-btn-->
         <div class="cart-btn" id="cart-btn">🛒</div>
+        <!--cart-counter-->
+        <span class="cart-counter" id="cart-counter">0</span>
 
         <!--modal-->
         <div class="modal-overlay" id="modal-overlay"></div>
