--- a/AdryBalmaceda/Ecommerce/index.html
+++ b/AdryBalmaceda/Ecommerce/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content=""IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--corregir-->
-        <link rel="stylesheet" href="styles.css">
-        <script src="https://sdk.mercadopago.com/js/v2"></script>
-        <title>Document</title>
-    </head>
-    <body>
-        <!--shop content-->
-        <div class="card-products-container">
-            <div class="card-products" id="shopContent"></div>
-        </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Corregido -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Comentario eliminado -->
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
+    <title>Document</title>
+</head>
+<body>
+    <!-- Shop content -->
+    <div class="card-products-container">
+        <div class="card-products" id="shopContent"></div>
+    </div>
 
-        <!--cart-btn-->
-        <div class="cart-btn" id="cart-btn">🛒</div>
-        <!--cart-counter-->
-        <span class="cart-counter" id="cart-counter">0</span>
+    <!-- Cart button -->
+    <div class="cart-btn" id="cart-btn">🛒</div>
+    <!-- Cart counter -->
+    <span class="cart-counter" id="cart-counter">0</span>
 
-        <!--modal-->
-        <div class="modal-overlay" id="modal-overlay"></div>
-        <div class="modal-container" id="modal-container"></div>
+    <!-- Modal -->
+    <div class="modal-overlay" id="modal-overlay"></div>
+    <div class="modal-container" id="modal-container"></div>
 
-        <script src="products.js"></script>
-        <script src="index.js"></script>
-        <script src="cart.js"></script>
-    </body>
+    <script src="products.js"></script>
+    <script src="index.js"></script>
+    <script src="cart.js"></script>
+</body>
 </html>
+
