--- a/SiroTorres/LaboratorioIV/JavaScript4S/e-commerce2024/client/media/index.html
+++ b/SiroTorres/LaboratorioIV/JavaScript4S/e-commerce2024/client/media/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--shop content-->
     <div class="card-produts-container">
         <div class="card-products" id="shopContent"></div>
     </div>
